--- a/segitiga.html
+++ b/segitiga.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Segitiga Sama Kaki</h1>
+    <h1>Segitiga Sama Sisi</h1>
     <p>Traveling the aether back to you</p>
 </body>
 </html>
